Fix spacing issues

--- a/src/themes/_reset.scss
+++ b/src/themes/_reset.scss
@@ -48,6 +48,8 @@ h4,
 h5,
 h6,
 p,
+ul,
+ol,
 li,
 figure,
 figcaption,
